Projet GL/Projet_GL/src/test/deca/codegen/invalid/created/wrongfloat2.deca
//Description 
//Wrong type cast of float 
{
    float x = 1;
}